# ShaderCross

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
doc/: api_reference.md  overview.md  user_guide.md
release/: release-frombuild.bat  release-qtdeploy.bat
resources/: resources.qrc
src/: compilerConfig.cpp  compilerConfig.h  compilerSettingUI.cpp  compilerSettingUI.h  documentWindow.cpp  documentWindow.h  dxcCompiler.cpp  dxcCompiler.h  fxcCompiler.cpp  fxcCompiler.h  glslangCompiler.cpp  glslangCompiler.h  glslangkgverCompiler.cpp  glslangkgverCompiler.h  glslkgverCodePrebuilder.cpp  glslkgverCodePrebuilder.h  languageConfig.cpp  languageConfig.h  main.cpp  mainwindow.cpp  mainwindow.h  shaderCodeTextEdit.cpp  shaderCodeTextEdit.h  spirvUtils.cpp  spirvUtils.h
src/resources/: resources.qrc
